syntax = "proto3";

package cre.sdk.v2.consensus;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/v2/consensus";

import "values/pb/values.proto";
import "capabilities/v2/protoc/pkg/pb/cre_metadata.proto";

enum AggregationType {
  MEDIAN = 0;
  IDENTICAL = 1;
  COMMON_PREFIX = 2;
  COMMON_SUFFIX = 3;
}

message FieldsMap {
  map<string, FieldDescriptor> fields = 1;
}

message FieldDescriptor {
  oneof descriptor {
    AggregationType aggregation = 1;
    FieldsMap fieldsMap = 2;
  }
}

message SimpleInputs {
  values.Map observation = 1;
  map<string, FieldDescriptor> descriptors = 2;
  values.Map default = 3;
}

service Consensus {
  option (cre.metadata.capability) = {
    mode: DON
    capability_id: "offchain_reporting@1.0.0"
  };
  rpc Simple (SimpleInputs) returns (values.Value);
}
